# realtornet

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  DEFERRED.md  Dockerfile  LICENSE  Makefile  PHASE_STATUS.md  PREFLIGHT.md  PROJECT_TRUTH.md  Preflight Rules.md  README.md  RealtorNet_PhaseK_Backend_Dispatch.md  RealtorNet_Phase_I_Workbook.md  RealtorNet_Phase_K_Opening_Brief.md  RealtorNet_Phase_O_Workbook.md  RealtorNet_Phase_P_Workbook.md  SOP.md  alembic.ini  attributes.gitattributes  backend_tree.txt  baseline_collect.txt  baseline_error_by_file.txt  check_imports.py  check_staging_admin_db.py  check_staging_migration.py  check_staging_users.py  check_user_ids.py  cleanup_staging.ps1  create_staging_admin.py  fix_admin_supabase_id.py  fix_staging_admin.py  full_suite_results.txt  n9_walkthrough.ps1  old_requirements.txt  (+15 more)
.claude/: settings.local.json
.claude/commands/: audit.md  browser_check.md  cascade_check.md  context_checkpoint.md  coverage_run.md  crud_review.md  fix_failing_test.md  preflight_check.md  (+9 more)
app/: celery_worker.py  main.py
backend/: CLAUDE.md
docs/: DEFERRED.md  phase-g-workbook.md  phase-h-opening.md
scripts/: PRODUCTION_VERIFICATION.md  check_backend.sh  check_rls.sql  cleanup_phase_g7_smoke.py  ensure_storage_buckets.py  hard_delete_test_accounts_13_44.sql  migrate.py  phase_g7_production_smoke.py  prod_user_cleanup_pack.sql  reset_staging.py  run_e2e.sh  test_n1_queries.py  test_target.sh
tests/: conftest.py  test_main.py  test_phase_n4_notifications.py  utils.py
(+254 files in other folders)
